Added Send button and hover effects in contact form

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                                 <a href="https://github.com/SteeveNavarro777-Glitch" target="_blank">
                                     <i class="fab fa-github"></i>
                                 </a>
-                                <a href="https://www.linkedin.com/in/mishraji566/" target="_blank">
+                                <a href="https://www.linkedin.com/in/steeve-navarro-61a45938a" target="_blank">
                                     <i class="fab fa-linkedin"></i>
                                 </a>
 
@@ -313,8 +313,8 @@
                             <div class="input-control">
                                 <textarea name="" id="" cols="15" rows="8" placeholder="Message Here..."></textarea>
                             </div>
-                        </form>
-                    </div>
+                        </form> <button type="submit" class="send-btn">Send Message</button>
+                   </div>
                 </div>
             </div>
         </section>
